# Sardine

./: CMakeLists.txt  LICENSE  README.md  example.sd  out  out.asm
bld/: CMakeCache.txt  Makefile  cmake_install.cmake  osc
include/: assembler.h  lexer.h  parser.h
src/: assembler.cpp  lexer.cpp  main.cpp  parser.cpp
